--- a/ezwel_project/ezwel_framework/pom.xml
+++ b/ezwel_project/ezwel_framework/pom.xml
@@ -83,23 +83,23 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>${org.mybatis-version}</version>
+			<version>${mybatis.version}</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>${org.mybatis-spring-version}</version>
+			<version>${mybatis.spring.version}</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-servlet_3.0_spec</artifactId>
-			<version>${geronimo-servlet_3.0_spec-version}</version>
+			<version>1.0</version>
 			<scope>provided</scope> 
 		</dependency>		
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-jsp_2.2_spec</artifactId>
-			<version>${geronimo-jsp_2.2_spec-version}</version>
+			<version>1.2</version>
 			<scope>provided</scope>
 		</dependency>	
 		<dependency>
