--- a/ezwel_project/ezwel_if_demo/pom.xml
+++ b/ezwel_project/ezwel_if_demo/pom.xml
@@ -13,25 +13,25 @@
 	<packaging>war</packaging>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>com.ezwel.htl</groupId>
 			<artifactId>ezwel_if</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-					
-		<!-- Servlet 3.0 --><!-- check -->
+		
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-servlet_3.0_spec</artifactId>
+			<version>1.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.2</version>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-jsp_2.2_spec</artifactId>
+			<version>1.2</version>
 			<scope>provided</scope>
 		</dependency>
+		
 	</dependencies>
 </project>
