--- a/ezwel_project/ezwel_if_server/pom.xml
+++ b/ezwel_project/ezwel_if_server/pom.xml
@@ -11,21 +11,6 @@
 	<name>ezwel_if_server</name>
 	<description>ezwel_if_server</description>
 	<packaging>war</packaging>
-	
-	<build>
-		<finalName>${project.name}-${project.version}</finalName>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<configuration>
-						<testFailureIgnore>true</testFailureIgnore>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
 		
 	<dependencies>
 		<dependency>
@@ -34,6 +19,19 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-servlet_3.0_spec</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-jsp_2.2_spec</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.thetransactioncompany</groupId>
 			<artifactId>cors-filter</artifactId>
@@ -51,29 +49,16 @@
 			<optional>false</optional>							
 		</dependency> 
 
-		<dependency>
-			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-servlet_3.0_spec</artifactId>
-			<version>${geronimo-servlet_3.0_spec-version}</version>
-			<scope>provided</scope> 
-		</dependency>		
-		<dependency>
-			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-jsp_2.2_spec</artifactId>
-			<version>${geronimo-jsp_2.2_spec-version}</version>
-			<scope>provided</scope>
-		</dependency>
-	
 		<!--# mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>${org.mybatis-version}</version>
+			<version>${mybatis.version}</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>${org.mybatis-spring-version}</version>
+			<version>${mybatis.spring.version}</version>
 		</dependency>			
 		<dependency>
 			<groupId>commons-dbcp</groupId>
