--- a/ezwel_project/pom.xml
+++ b/ezwel_project/pom.xml
@@ -44,8 +44,8 @@
 		<ch.qos.logback-version>1.1.2</ch.qos.logback-version>
 		<org.lazyluke.log4jdbc.remix-version>0.2.7</org.lazyluke.log4jdbc.remix-version>
 		<joda-version>2.7</joda-version>
-		<org.mybatis-version>3.2.8</org.mybatis-version>
-		<org.mybatis-spring-version>1.2.2</org.mybatis-spring-version>
+		<mybatis.version>3.2.8</mybatis.version>
+		<mybatis.spring.version>1.2.2</mybatis.spring.version>
 		<geronimo-servlet_3.0_spec-version>1.0</geronimo-servlet_3.0_spec-version>
 		<geronimo-jsp_2.2_spec-version>1.2</geronimo-jsp_2.2_spec-version>
 		<org.apache.tomcat-jdbc-version>7.0.57</org.apache.tomcat-jdbc-version>
