--- a/ezwel_project/ezwel_if/pom.xml
+++ b/ezwel_project/ezwel_if/pom.xml
@@ -12,6 +12,10 @@
 	<description>ezwel_if</description>
 	<packaging>jar</packaging>
 
+	<build>
+		<finalName>ezwel_if</finalName>
+	</build>
+	
 	<properties>
 		<lucene-version>6.6.0</lucene-version>
 		<lucene-analyzers-version>3.6.2</lucene-analyzers-version>
