--- a/ezwel_project/ezwel_if_server/.classpath
+++ b/ezwel_project/ezwel_if_server/.classpath
@@ -46,5 +46,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lucene-core-6.6.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/morph-1.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/russian-1.1.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/javax.inject-1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
