--- a/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
+++ b/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 	</filter-mapping>
 	
 
-	<!-- LOG4J config : context param ##
+	<!-- LOG4J config : context param ## -->
 	<context-param>
 		<description>
 			Interval between config file refresh checks, in milliseconds. If not specified,
@@ -54,7 +54,7 @@
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>/WEB-INF/config/handle/log4j.xml</param-value>
 	</context-param>
-	-->
+	
 	
 	<!-- spring framework application root key -->
 	<context-param>
@@ -68,11 +68,11 @@
 		<param-value>/WEB-INF/config/spring/root-context.xml</param-value>
 	</context-param>
 	
-	<!-- LOG4J config : spring log4j config llistner ##
+	<!-- LOG4J config : spring log4j config llistner ## -->
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
-	-->
+	
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
@@ -89,7 +89,9 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/config/spring/servlet/servlet-context.xml</param-value>
+			<param-value>
+				/WEB-INF/config/spring/servlet/servlet-context.xml
+			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
