--- a/ezwel_project/ezwel_if_demo/pom.xml
+++ b/ezwel_project/ezwel_if_demo/pom.xml
@@ -23,7 +23,13 @@
 			<artifactId>ezwel_if</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.ezwel.htl</groupId>
+			<artifactId>ezwel_if_server</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+				
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-servlet_3.0_spec</artifactId>
