--- a/ezwel_project/ezwel_if_server/pom.xml
+++ b/ezwel_project/ezwel_if_server/pom.xml
@@ -63,7 +63,7 @@
 			<optional>false</optional>
 		</dependency> -->	
 
-		<!--# mybatis 
+		<!--# mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -79,7 +79,7 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
-		-->
+		
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
