--- a/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/config/datasource/jdbc.properties
+++ b/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/config/datasource/jdbc.properties
@@ -16,7 +16,7 @@
 # testWhileIdle : true\uC77C \uACBD\uC6B0, \uBE44\uD694\uC131\uD654 \uCEE4\uB125\uC158\uC744 \uCD94\uCD9C\uD560 \uB54C, \uCEE4\uB125\uC158\uC774 \uC720\uD6A8\uD55C\uC9C0 \uAC80\uC0AC\uD574\uC11C \uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uCEE4\uB125\uC158\uC740 \uD480\uC5D0\uC11C \uC81C\uAC70.
 
 # tomcat
-oracle.jndi.datasource.database=java:comp/env/EZWEL_DS
+oracle.jndi.datasource.database=java:comp/env/ezwelDS
 
 # \uC81C\uC6B0\uC2A4 jeus, websphere, weblogic 
 #oracle.jndi.datasource.database=EZWEL_DS
