--- a/ezwel_project/ezwel_if/pom.xml
+++ b/ezwel_project/ezwel_if/pom.xml
@@ -24,5 +24,23 @@
 			<version>${project.version}</version>
 		</dependency>
 		-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${ch.qos.logback-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${ch.qos.logback-version}</version>
+		</dependency>
+		 -->		
 	</dependencies>	
 </project>
