--- a/ezwel_project/pom.xml
+++ b/ezwel_project/pom.xml
@@ -321,6 +321,12 @@
 			<version>${org.slf4j-version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${org.slf4j-version}</version>
+			<scope>runtime</scope>
+		</dependency>		
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.log4j-version}</version>
