--- a/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
+++ b/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
@@ -79,10 +79,10 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<listener>
+<!-- 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
-
+ -->
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>applicationServlet</servlet-name>
