--- a/ezwel_project/ezwel_if_server/src/main/java/commons-logging.properties
+++ b/ezwel_project/ezwel_if_server/src/main/java/commons-logging.properties
@@ -1,4 +1,6 @@
+org.apache.commons.logging.LogFactory=org.apache.commons.logging.impl.LogFactoryImpl
+#org.apache.commons.logging.LogFactory=org.slf4j.LoggerFactory
 org.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4JLogger
+#org.apache.commons.logging.Log=org.apache.commons.logging.impl.Jdk14Logger
+#org.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog
 #org.apache.commons.logging.Log=org.apache.commons.logging.impl.NoOpLog
-org.apache.commons.logging.LogFactory=org.slf4j.LoggerFactory
-#org.apache.commons.logging.LogFactory=org.apache.commons.logging.impl.LogFactoryImpl
