--- a/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
+++ b/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
@@ -59,7 +59,7 @@
 	<!-- spring framework application root key -->
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>root.ezwel_if_server</param-value>
+		<param-value>ezwel_if_server</param-value>
 	</context-param>
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
@@ -79,10 +79,10 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-<!-- 	<listener>
-		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+ 	<listener>
+		<listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
 	</listener>
- -->
+ 
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>applicationServlet</servlet-name>
