--- a/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
+++ b/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
@@ -2,13 +2,18 @@
 #	INTERFACE MANAGED PROPERTIES	#
 #####################################
 # DevServer
-devServerDomain=http://ezc-api.dev.ezwel.com/API1.0
+# ip range
 devServerIpRange=192.168.110.*
-devMasterServerName=192.168.110.83
+# dev L4 domain
+devServerDomain=http://ezc-api.dev.ezwel.com/API1.0
+# master server server name
+devMasterServerName=http://ezc-api.dev.ezwel.com/API1.0
 # ProdServer
 prodServerIpRange=192.168.110.*
+# prod L4 domain
 prodServerDomain=http://ezc-api.ezwel.com/API1.0
-prodMasterServerName=192.168.110.10
+# master server server name 
+prodMasterServerName=http://ezc-api.ezwel.com/API1.0
 # Master Setup Info  
 configXmlServerUri=/server/configXML
 webRootKeyName=webAppRootKey
