--- a/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
+++ b/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
@@ -5,14 +5,14 @@
 # ip range
 devServerIpRange=192.168.110.*
 # dev L4 domain
-devServerDomain=http://ezc-api.dev.ezwel.com/API1.0
+devServerL4Domain=http://ezc-api.dev.ezwel.com/API1.0
 # master server server name
 devMasterServerName=http://ezc-api.dev.ezwel.com/API1.0
 ## ProdServer
 # ip range
 prodServerIpRange=192.168.110.*
 # prod L4 domain
-prodServerDomain=http://ezc-api.ezwel.com/API1.0
+prodServerL4Domain=http://ezc-api.ezwel.com/API1.0
 # master server server name 
 prodMasterServerName=http://ezc-api.ezwel.com/API1.0
 ## Master Setup Info
