--- a/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
+++ b/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
@@ -98,7 +98,7 @@
 		
 	<servlet-mapping>
 		<servlet-name>applicationServlet</servlet-name>
-		<url-pattern>/serviceEndpoint</url-pattern>
+		<url-pattern>/service</url-pattern>
 	</servlet-mapping>
 	
 	<!-- The specified timeout must be expressed in a whole number of minutes. -->
