--- a/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
+++ b/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
@@ -3,14 +3,14 @@
 #####################################
 ## DevServer
 # ip range
-devServerIpRange=192.168.110.*
+devServerIpRange=192.168.110.8*
 # dev L4 domain
 devServerL4Domain=http://ezc-api.dev.ezwel.com/API1.0
 # master server server name
 devMasterServerName=http://ezc-api.dev.ezwel.com/API1.0
 ## ProdServer
 # ip range
-prodServerIpRange=192.168.110.*
+prodServerIpRange=192.168.110.xx*
 # prod L4 domain
 prodServerL4Domain=http://ezc-api.ezwel.com/API1.0
 # master server server name 
