--- a/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
+++ b/ezwel_project/ezwel_if_server/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,6 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
 
 	<!-- LOG4J config : context param ## -->
 	<context-param>
@@ -55,7 +54,6 @@
 		<param-value>/WEB-INF/config/handle/log4j.xml</param-value>
 	</context-param>
 	
-	
 	<!-- spring framework application root key -->
 	<context-param>
 		<param-name>webAppRootKey</param-name>
@@ -72,7 +70,6 @@
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
-	
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
@@ -98,7 +95,7 @@
 		
 	<servlet-mapping>
 		<servlet-name>applicationServlet</servlet-name>
-		<url-pattern>/service</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
 	<!-- The specified timeout must be expressed in a whole number of minutes. -->
