--- a/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
+++ b/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
@@ -5,9 +5,9 @@
 # ip range
 devServerIpRange=192.168.110.8*
 # dev L4 domain
-devServerL4Domain=http://ezc-api.dev.ezwel.com/API1.0
+devServerL4Domain=http://localhost:8282/API1.0
 # master server server name
-devMasterServerName=http://ezc-api.dev.ezwel.com/API1.0
+devMasterServerName=http://localhost:8282/API1.0
 ## ProdServer
 # ip range
 prodServerIpRange=192.168.110.xx*
