--- a/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
+++ b/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
@@ -8,6 +8,15 @@ devServerIpRange=192.168.110.8*
 devServerL4Domain=http://ezc-api.dev.ezwel.com/API1.0
 # master server server name
 devMasterServerName=http://ezc-api.dev.ezwel.com/API1.0
+
+## API Team TestServer
+# ip range
+testServerIpRange=192.168.110.84
+# dev L4 domain
+testServerL4Domain=http://ezc-api-test.dev.ezwel.com/API1.0
+# master server server name
+testMasterServerName=http://ezc-api-test.dev.ezwel.com/API1.0
+
 ## ProdServer
 # ip range
 prodServerIpRange=192.168.110.xx*
@@ -15,9 +24,10 @@ prodServerIpRange=192.168.110.xx*
 prodServerL4Domain=http://ezc-api.ezwel.com/API1.0
 # master server server name 
 prodMasterServerName=http://ezc-api.ezwel.com/API1.0
+
 ## Master Setup Info
 # directParseXmlYn : Y,N
 directParseXmlYn=Y
 configXmlServerUri=/service/configXML
 webRootKeyName=webAppRootKey
-ifServerWebRootKey=ezwel_if_server
+ifServerWebRootKey=ezwel_if_server,ezwel_if_server_test
