--- a/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
+++ b/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
@@ -8,6 +8,7 @@ devServerIpRange=192.168.110.8*
 devServerL4Domain=http://ezc-api.dev.ezwel.com/API1.0
 # master server server name
 devMasterServerName=http://ezc-api.dev.ezwel.com/API1.0
+# localhost:8282
 
 ## API Team TestServer
 # ip range
@@ -31,3 +32,14 @@ directParseXmlYn=Y
 configXmlServerUri=/service/configXML
 webRootKeyName=webAppRootKey
 ifServerWebRootKey=ezwel_if_server,ezwel_if_server_test
+
+## 환경파일 관련 경로가 if_server baseRoot로 부터 상대경로인지 여부 (Y/N)
+isIfServerRelativePath=Y
+## 인터페이스 환경XML파일 임시 저장경로 루트
+temporaryXmlStorageRoot=/WEB-INF/config/interface/store
+## 인터페이스 환경을 변경된 환경으로 반영전 이전 파일을 백업할 루트 경로
+xmlConfigFileBackupRoot=/WEB-INF/config/interface/backup
+## 인터페이스 환경 변경 로그 루트 경로
+applyConfigLogRoot=/WEB-INF/config/interface/logs
+## 인터페이스 환경XML파일 경로
+xmlConfigRealPath=/WEB-INF/config/interface/interface-configure.xml
