--- a/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
+++ b/ezwel_project/ezwel_if/src/main/resources/com/ezwel/htl/interfaces/commons/configure/interface-managed.properties
@@ -34,7 +34,7 @@ webRootKeyName=webAppRootKey
 ifServerWebRootKey=ezwel_if_server,ezwel_if_server_test
 
 ## 환경파일 관련 경로가 if_server baseRoot로 부터 상대경로인지 여부 (Y/N)
-isIfServerRelativePath=Y
+ifServerRelativePath=Y
 ## 인터페이스 환경XML파일 임시 저장경로 루트
 temporaryXmlStorageRoot=/WEB-INF/config/interface/store
 ## 인터페이스 환경을 변경된 환경으로 반영전 이전 파일을 백업할 루트 경로
